<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- ################### TITLE #################### -->
    <string name="title_main">Board Game\nScore</string>
    <string name="title_home">&#x265c; Board Game Score &#x265c;</string>
    <string name="title_account">&#x265c; My profile &#x265c;</string>
    <string name="title_games">&#x265c; Collection &#x265c;</string>
    <string name="title_matches">&#x265c; Matches &#x265c;</string>
    <string name="title_info">&#x265c; Information &#x265c;</string>
    <string name="title_welcome">&#x265c; News &#x265c;</string>
    <string name="title_match">&#x265c; Match &#x265c;</string>
    <string name="title_game">&#x265c; Game &#x265c;</string>
    <string name="title_help">&#x265c; Help &#x265c;</string>
    <string name="title_import_collection">&#x265c; BGG &#x265c;</string>

...
    <string name="btn_sign_in">CREATE ACCOUNT</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="btn_create">CREATE</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_close">CLOSE</string>
    <string name="btn_ok">OK</string>
    <string name="btn_share">SHARE</string>
    <string name="btn_confirmation_dialog_exit">EXIT</string>
    <string name="btn_confirmation_dialog_cancel">CANCEL</string>
    <string name="btn_confirmation_dialog_delete">DELETE</string>
    <string name="btn_confirmation_dialog_remove">REMOVE</string>
    <string name="btn_confirmation_dialog_restore">RESTORE</string>
...
    <string name="btn_option_broken_img">FIX BROKEN IMAGE</string>
    <string name="btn_option_import_bgg">IMPORT BOARDGAMEGEEK</string>
    <string name="btn_about">ABOUT APP!</string>


    <!-- ################### ACTION BAR #################### -->
    <string name="action_home">home</string>
    <string name="action_matches">matches</string>
    <string name="action_games">collection</string>
    <string name="action_account">profile</string>
    <string name="action_copy">duplicate</string>
    <string name="action_detail">details</string>
    <string name="action_buy">buy</string>
    <string name="action_share">share</string>
    <string name="action_info">info</string>
    <string name="action_more">more</string>
    <string name="action_edit">edit</string>
    <string name="action_finish">finish</string>
    <string name="action_remove">delete</string>


...
